--- a/index.html
+++ b/index.html
@@ -3,76 +3,39 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="viewport" content="device-width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fox-In-The-Code</title>
     <link rel="icon" type="image/x-icon" href="Favicon.ico">
     <link rel="stylesheet" href="styles.css">
-    <link href=""https://cdn.jsdeliver.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 
 </head>    
 <body>
 
+<!-- TÄnne tulee jotain diipadaapaa -->
 
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Fox-In-the-Code</a> 
+        <button class=""navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
+         <span class="navbar-toggler-icon"></span>
+       
+        </button>
+        <div class="collapse navbar-collapse id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link active" href="#">Etusivu</a></li>
+            <li class="nav-iten"><a class="nav-link" href="#">Tietoa Meistä</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Ota Yhteyttä!</a></li>
+         </ul> 
+       
+        </div>
 
+    </div>
 
-    <!-- TÄnne tulee jotain diipadaapaa -->
-
-
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+   </nav>
+  
+ 
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-Laitettu 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
