varmuuskopio ja ihan vaan varmuuden vuoksi.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>    
 <body>
 
-<!-- TÄnne tulee jotain diipadaapaa -->
+<!-- Tänne tulee jotain diipadaapaa ja sitärataa-->
 
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
