Hero kuva laitettu

--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
 
 </head>    
 <body>
-
-<!-- Tänne tulee jotain diipadaapaa ja sitärataa-->
+  <body>
+    <!-- HERO SECTION -->
+    <section class="hero">
+      <img src="images/Frame%201.png" alt="Fox-In-The-Code Hero" class="hero-image">
+      
+      <div class="hero-text">
+        <h1>Fox-In-The-Code</h1>
+        <p>Ota yhteyttä ja kysy lisää!</p>
+        <a href="#" class="btn btn-primary">Ota Yhteyttä</a>
+      </div>
+    </section>
+  
+<!-- Tänne tulee jotain diipadaapaa ja sitärataa  #004F54 -->
 
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
