--- a/index.html
+++ b/index.html
@@ -1,47 +1,66 @@
 <!DOCTYPE html>
 <html lang="fi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fox-In-The-Code</title>
-  
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
+<!--Sivun sisältö alkaa-->
+  <!--Sivun otsikko alkaa-->
+  <header>
+    <h1>Fox-In-The-Code</h1>
+    <p>Welcome to our website!</p>
+  </header>
+  <!--Sivun otsikko päättyy-->
+<!--yläpalkki eli navigointipakki alkaa-->
+  <nav class="navbar">
+    <!--Tämä säiliö pitää logon vasemmalla ja linkit oikealle -->
+    <div class="nav-container">
 
-  <!-- NAVIGAATIO -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-transparent p-4">
-    <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="images/logo.png" alt="Fox-In-The-Code Logo" style="height: 50px; margin-right: 10px;">
-        <span>Fox-In-The-Code</span>
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-        </ul>
+      <!--vasen puoli: logo + nimi -->
+      <div class="logo-group">
+        
+        <!--logokuva -->
+        <img src="images/logo.jpg" alt="Logo" class="logo"/>
+        
+        <!--Brändinimi logon vieressä -->
+         <span class="brand">Fox-In-The-Code</span>
       </div>
-    </div>
+
+      <!-- Oikea puoli:linkit navigointiin-->
+      <ul class="nav-links">
+
+        <!--Jokainen <li> on yksi valikkokohta -->
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+
+    </div> <!--nav-cointainer loppuu-->
   </nav>
+  <!--Navigointipalkki päättyy-->
+  
+  
+  <main class="hero">
+  <!--Sankariosio eli etusivun isoin esittelyalue alkaa-->
+    <h1>Above robust<br>software solutions</h1>
+    <!--Cal-to-action-painike-->
+    <a href="#" class="btn">Get Started</a>
+  </main>
+  <!--Sankariosio loppuu-->
 
-  <!-- HERO SECTION -->
-  <section class="hero d-flex flex-column justify-content-center align-items-center text-center">
-    <h1>Above Robust</h1>
-    <h2>software solutions</h2>
-    <a href="#" class="btn btn-light mt-4 px-5 py-2">Get Started</a>
-  </section>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <footer>
+    <!--Alatunniste alkaa-->
+    <p>&copy; 2025 Fox-In-The-Code | All rights reserved.</p> <!--Alatunniste päättyy-->
+  </footer>
+
 </body>
+<!--Sivun sisältö päättyy-->
 </html>
+<!--HTML-dokumentti päättyy-->
