Tehty About-sivun pohja

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
 
       <!--Hero-Teksti-->
-      <h1>Above robust<br>App- & Software solutions</h1>
+      <h1>Above robust<br>AI/ML app- & software solutions </h1>
       <a href="#" class="btn">Get Started</a>
     </main>
 
