--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
+                <a href="services.html">Services</a>
             </div>
 
             <!-- Oikea puoli: lisäsisältöä varten (esim. karuselli) -->
