Laitettu lila kaareva viiva

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
     
     </nav>
 
+    <!-- ============================
+     NAVIN ALAVIIVA / KAARRE (SVG)
+============================ -->
+<div class="nav-curve">
+  <svg viewBox="0 0 100 10" preserveAspectRatio="none">
+    <path d="M 0 0 Q 50 5, 100 0" fill="rebeccapurple" />
+  </svg>
+</div>
+
     <!-- =========================
        HERO-SEKTIO (etusivun pääviesti)
   ========================== -->
