--- a/index.html
+++ b/index.html
@@ -120,6 +120,72 @@
     <img src="images/logos/css.svg" alt="CSS" />
     <img src="images/logos/bootstrap.svg" alt="Bootstrap" />
     <img src="images/logos/figma.svg" alt="Figma" />
+
+    <!-- 🔁 Tupla-Duplikaatti saumattomaan rullaukseen -->
+    <img src="images/logos/cplusplus.svg" alt="C++" />
+    <img src="images/logos/github.svg" alt="GitHub" />
+    <img src="images/logos/pytorch.svg" alt="PyTorch" />
+    <img src="images/logos/javascript.svg" alt="JavaScript" />
+    <img src="images/logos/githubactions.svg" alt="GitHub Actions" />
+    <img src="images/logos/kotlin.svg" alt="Kotlin" />
+    <img src="images/logos/tensorflow.svg" alt="TensorFlow" />
+    <img src="images/logos/python.svg" alt="Python" />
+    <img src="images/logos/html5.svg" alt="HTML5" />
+    <img src="images/logos/mongodb.svg" alt="MongoDB" />
+    <img src="images/logos/pandas.svg" alt="Pandas" />
+    <img src="images/logos/tailwindcss.svg" alt="TailwindCSS" />
+    <img src="images/logos/numpy.svg" alt="NumPy" />
+    <img src="images/logos/confluence.svg" alt="Confluence" />
+    <img src="images/logos/nextdotjs.svg" alt="Next.js" />
+    <img src="images/logos/sqlite.svg" alt="SQLite" />
+    <img src="images/logos/docker.svg" alt="Docker" />
+    <img src="images/logos/css.svg" alt="CSS" />
+    <img src="images/logos/bootstrap.svg" alt="Bootstrap" />
+    <img src="images/logos/figma.svg" alt="Figma" />
+
+    <!-- 🔁 Tupla-Tupla Duplikaatti saumattomaan rullaukseen -->
+    <img src="images/logos/cplusplus.svg" alt="C++" />
+    <img src="images/logos/github.svg" alt="GitHub" />
+    <img src="images/logos/pytorch.svg" alt="PyTorch" />
+    <img src="images/logos/javascript.svg" alt="JavaScript" />
+    <img src="images/logos/githubactions.svg" alt="GitHub Actions" />
+    <img src="images/logos/kotlin.svg" alt="Kotlin" />
+    <img src="images/logos/tensorflow.svg" alt="TensorFlow" />
+    <img src="images/logos/python.svg" alt="Python" />
+    <img src="images/logos/html5.svg" alt="HTML5" />
+    <img src="images/logos/mongodb.svg" alt="MongoDB" />
+    <img src="images/logos/pandas.svg" alt="Pandas" />
+    <img src="images/logos/tailwindcss.svg" alt="TailwindCSS" />
+    <img src="images/logos/numpy.svg" alt="NumPy" />
+    <img src="images/logos/confluence.svg" alt="Confluence" />
+    <img src="images/logos/nextdotjs.svg" alt="Next.js" />
+    <img src="images/logos/sqlite.svg" alt="SQLite" />
+    <img src="images/logos/docker.svg" alt="Docker" />
+    <img src="images/logos/css.svg" alt="CSS" />
+    <img src="images/logos/bootstrap.svg" alt="Bootstrap" />
+    <img src="images/logos/figma.svg" alt="Figma" />
+
+    <!-- 🔁 Tripla-Tupla Duplikaatti saumattomaan rullaukseen -->
+    <img src="images/logos/cplusplus.svg" alt="C++" />
+    <img src="images/logos/github.svg" alt="GitHub" />
+    <img src="images/logos/pytorch.svg" alt="PyTorch" />
+    <img src="images/logos/javascript.svg" alt="JavaScript" />
+    <img src="images/logos/githubactions.svg" alt="GitHub Actions" />
+    <img src="images/logos/kotlin.svg" alt="Kotlin" />
+    <img src="images/logos/tensorflow.svg" alt="TensorFlow" />
+    <img src="images/logos/python.svg" alt="Python" />
+    <img src="images/logos/html5.svg" alt="HTML5" />
+    <img src="images/logos/mongodb.svg" alt="MongoDB" />
+    <img src="images/logos/pandas.svg" alt="Pandas" />
+    <img src="images/logos/tailwindcss.svg" alt="TailwindCSS" />
+    <img src="images/logos/numpy.svg" alt="NumPy" />
+    <img src="images/logos/confluence.svg" alt="Confluence" />
+    <img src="images/logos/nextdotjs.svg" alt="Next.js" />
+    <img src="images/logos/sqlite.svg" alt="SQLite" />
+    <img src="images/logos/docker.svg" alt="Docker" />
+    <img src="images/logos/css.svg" alt="CSS" />
+    <img src="images/logos/bootstrap.svg" alt="Bootstrap" />
+    <img src="images/logos/figma.svg" alt="Figma" />
   </div>
 </section>
 
