Nyt saatu myös Formspree-lomake tehty valmiiksi ja testattu

--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class="story-block">
-                    <h3>Kuka me ollaan ?</h3>
+                    <h3>Kuka on Fox-In-The-Code ?</h3>
                     <p>
                         Olen rakentaja, suunnittelija, kehittäjä ja kehittämisen kokenut monivuotinen asiantuntija vaativilta tuotanto-ja palveluliiketoiminnan aloilta.
                         Yhdistän käytännönläheisen sovellussuunnittelun ja modernin teknologiaosaamisen. 
@@ -156,8 +156,8 @@
                         kuuluvat mm. VS Code, GitHub Actions, Python, JavaScript, Tailwind CSS, SQL, sekä REST API
                         -integraatiot ja kevyt pilviarkkitehtuuri.
 
-                        Toimin itsenäisesti, mutta taustalla on laaja verkosto asiantuntijoita – tarvittaessa kokoan
-                        tiimin, jolla ratkaistaan isommatkin haasteet.
+                        Toimin itsenäisesti, mutta taustalla on laaja verkosto eri alan asiantuntijoita – tarvittaessa kokoan
+                        tiimin, jolla ratkaistaan ne isommat ja kinkkisimmätkin haasteet.
                     </p>
                 </div>
 
