--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
          ALATUNNISTE / FOOTER
     =============================== -->
     <footer class="footer">
-      <p>&copy; 2025 Fox-In-The-Code | Tornio | <a href="tel:+358440606044">044 0606 044</a> | <span id="footerEmail"></span></p>
+      <p>&copy; 2025 Fox-In-The-Code </span></p>
     </footer>
   </div>
 
