--- a/about.html
+++ b/about.html
@@ -2,188 +2,136 @@
 <html lang="fi">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About – Fox-In-The-Code</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>About – Fox-In-The-Code</title>
 
-    <!-- ===============================
+  <!-- ===============================
        FONTIT JA TYYLITIEDOSTOT
   =============================== -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
+  <div class="wrapper">
 
     <!-- ===============================
-       WRAPPER – KOKO SIVUN RAKENNE
-  =============================== -->
-    <div class="wrapper">
-
-        <!-- ===============================
-         YLÄOSA / NAVIGAATIO
+         NAVIGAATIO
     =============================== -->
-        <nav class="nav-container">
-            <div class="logo-group">
-                <img src="images/logo.jpg" alt="Fox logo" class="logo" />
-                <span class="brand">Fox-In-The-Code</span>
-            </div>
-            <div class="nav-links">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                <a href="services.html">Services</a>
-            </div>
-        </nav>
+    <nav class="nav-container">
+      <div class="logo-group">
+        <img src="images/logo.jpg" alt="Fox logo" class="logo" />
+        <span class="brand">Fox-In-The-Code</span>
+      </div>
+      <div class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html" class="active">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="services.html">Services</a>
+      </div>
+    </nav>
 
-        <!-- ===============================
-         NAVIN AALLOKUVA (KAAREVA VIOLETTI REUNA)
+    <!-- ===============================
+         NAVIN AALTO (SVG)
     =============================== -->
-        <div class="nav-curve">
-            <svg viewBox="0 0 100 10" preserveAspectRatio="none">
-                <path d="M 0 0 Q 50 1, 100 0" fill="rebeccapurple" />
-            </svg>
-        </div>
+    <div class="nav-curve">
+      <svg viewBox="0 0 100 10" preserveAspectRatio="none">
+        <path d="M 0 0 Q 50 1, 100 0" fill="rebeccapurple" />
+      </svg>
+    </div>
 
-        <!-- ===============================
+    <!-- ===============================
          SISÄLTÖALUE – ABOUT
     =============================== -->
-        <main class="hero">
+    <main class="hero">
 
-            <!-- =============================
-           ABOUT-OSIO – KUKA ME OLLAAN
-      ============================= -->
-            <!--
       <section class="about-section">
+        <!-- Palautettu logo-osio -->
+        <div class="about-logo">
+          <img src="images/logo.jpg" alt="Fox-In-The-Code logo">
+          <p class="slogan">ABOVE ROBUST SOFTWARE SOLUTIONS</p>
+        </div>
 
-        <!-- Logo + slogan -->
-            <div class="about-logo">
-                <img src="images/logo.jpg" alt="Fox-In-The-Code logo" />
-                <p class="slogan">ABOVE ROBUST SOFTWARE SOLUTIONS</p>
-            </div>
+        <!-- Otsikko + ingressi -->
+        <h2>Mitä me teemme</h2>
+        <p class="ingressi">
+          Helpotamme yritysten arjen arkkitehtuuria — yhdellä fiksulla sovelluksella kerrallaan.
+        </p>
+      </section>
 
-            <!-- Otsikko + ingressi -->
-            <h2>Mitä me teemme</h2>
-            <p class="ingressi">
-                Helpotamme yritysten arjen arkkitehtuuria — yhdellä fiksulla sovelluksella kerrallaan.
-            </p>
-            <!-- =============================
-         MEISTÄ / FOX-IN-THE-CODE
-         ============================ -->
-
-
-            <!-- =============================
-             3-ASKELEEN METODI – DEFINE / BUILD / FINISH
-        ============================= -->
-
-            <section class="quality-icons">
-
-                <!-- DEFINE -->
-                <div class="define-title">
-                    <span class="bracket">{</span> DEFINE <span class="bracket">}</span>
-                </div>
-                <div class="quality-block">
-
-
-                    <p>Me määritämme/"paretoimme" ongelman ja sen ratkaisun yhdessä asiakkaan kanssa. Ymmärrämme liiketoimintanne
-                        tarpeet, jotta voimme luoda parhaan mahdollisen ratkaisun.</p>
-                </div>
-
-                <!-- BUILD -->
-                <div class="define-title">
-                    <span class="bracket">{</span> BUILD <span class="bracket">}</span>
-                </div>
-                <div class="quality-block">
-
-
-                    <p>Me rakennamme Teille suorituskykyisen ratkaisun, joka on skaalautuva ja kestävä. Verkostomme koostuu eri alan asiantuntevista
-                        ohjelmoijista ja suunnittelijoista.</p>
-                </div>
-
-                <!-- FINISH -->
-                <div class="define-title">
-                    <span class="bracket">{</span> FINISH <span class="bracket">}</span>
-                </div>
-                <div class="quality-block">
-
-
-                    <p>Viimeistelemme ratkaisun yhdessä asiakkaan kanssa varmistaaksemme, että se toimii juuri kuten
-                        pitää – ja vielä paremmin.</p>
-                </div>
-
-            </section>
-
-            <section class="about-story">
-
-                <h2>Fox-In-The-Code lyhyesti</h2>
-                <p class="about-lead">
-                    Fox-In-The-Code on moderni kehitystoimisto, joka rakentaa ketteriä ja kestäviä sovelluksia
-                    asiakastarpeiden ytimeen.
-                    Meidät tunnetaan oikeasta fokuksesta – ja me keskitymme siihen mikä tuottaa oikeasti arvoa.
-                </p>
-
-                <div class="story-block">
-                    <h3>Näin kaikki sai alkunsa</h3>
-                    <p>Meidän tarinamme alkoi osaamisesta korjata monimutkaisia ja kankeita yritysprosesseja eri
-                        kokoisille yrityksille sekä järjestelmiä Lean-, SixSigma ja Scrum-menetelmien avulla.
-                        Aluksi keskityimme pieniin jatkuvan parannuksen integraatioihin – ja tänä päivänä tarkoituksemme
-                        on
-                        rakentaa kokonaisvaltaisia sovellusratkaisuja, jotka tukevat liiketoimintaa ja toimivat
-                        kestävänä alustana kasvulle myös AI:n ja ML-koneoppimisen kautta.</p>
-                </div>
-
-                <div class="story-block">
-                    <h3>Above Robust - ajattelu</h3>
-                    <p>
-                        Me tiedämme, että pelkkä hyvä ei enää riitä yrityksille kilpailussa. Me haluamme rakentaa Teille
-                        ratkaisuja, jotka kestävät kasvua, aikaa ja
-                        käyttöä sekä ovat helppoja ylläpitää. Meidän tiimimme on sitoutunut
-                        kehittämään <strong><u>suorituskykyistä koodia</strong></u></strong>, joka on puhdasta, selkeää
-                        ja tekee sen minkä lupaa.
-                        Juuri sen varmistamiseksi jokainen projektimme etenee kolmen vaiheen kautta:
-                        <strong>Define</strong>,
-                        <strong>Build</strong> ja <strong>Finish</strong>.
-                    </p>
-                </div>
-
-                <div class="story-block">
-                    <h3>Kuka on Fox-In-The-Code ?</h3>
-                    <p>
-                        Olen rakentaja, suunnittelija, kehittäjä ja kehittämisen kokenut monivuotinen asiantuntija vaativilta tuotanto-ja palveluliiketoiminnan aloilta.
-                        Yhdistän käytännönläheisen sovellussuunnittelun ja modernin teknologiaosaamisen. 
-                        
-                        Työkalupakkiini
-                        kuuluvat mm. VS Code, GitHub Actions, Python, JavaScript, Tailwind CSS, SQL, sekä REST API
-                        -integraatiot ja kevyt pilviarkkitehtuuri.
-
-                        Toimin itsenäisesti, mutta taustalla on laaja verkosto eri alan asiantuntijoita – tarvittaessa kokoan
-                        tiimin, jolla ratkaistaan ne isommat ja kinkkisimmätkin haasteet.
-                    </p>
-                </div>
-
-                <div class="story-cta">
-                    <h3>Tarvitsetko ratkaisun, joka ei hajoa eikä jää puolitiehen ?</h3>
-                    <a href="contact.html" class="btn">Ota yhteyttä</a>
-                </div>
-
-            </section>
-
-            <!-- =============================
-           CTA – KEHOTUS TOIMIA
+      <!-- =============================
+           3-ASKELEEN METODI – DEFINE / BUILD / FINISH
       ============================= -->
+      <section class="quality-icons">
+        <div class="define-title">
+          <span class="bracket">{</span> DEFINE <span class="bracket">}</span>
+        </div>
+        <div class="quality-block">
+          <p>Me määritämme/"paretoimme" ongelman ja sen ratkaisun yhdessä asiakkaan kanssa. Ymmärrämme liiketoimintanne tarpeet, jotta voimme luoda parhaan mahdollisen ratkaisun.</p>
+        </div>
 
+        <div class="define-title">
+          <span class="bracket">{</span> BUILD <span class="bracket">}</span>
+        </div>
+        <div class="quality-block">
+          <p>Me rakennamme Teille suorituskykyisen ratkaisun, joka on skaalautuva ja kestävä. Verkostomme koostuu eri alan asiantuntevista ohjelmoijista ja suunnittelijoista.</p>
+        </div>
 
-        </main>
+        <div class="define-title">
+          <span class="bracket">{</span> FINISH <span class="bracket">}</span>
+        </div>
+        <div class="quality-block">
+          <p>Viimeistelemme ratkaisun yhdessä asiakkaan kanssa varmistaaksemme, että se toimii juuri kuten pitää – ja vielä paremmin.</p>
+        </div>
+      </section>
 
-        <!-- ===============================
+      <!-- =============================
+           TARINAOSIO – KUKA ON FOX-IN-THE-CODE
+      ============================= -->
+      <section class="about-story">
+        <h2>Fox-In-The-Code lyhyesti</h2>
+        <p class="about-lead">
+          Fox-In-The-Code on moderni kehitystoimisto, joka rakentaa ketteriä ja kestäviä sovelluksia asiakastarpeiden ytimeen.
+          Meidät tunnetaan oikeasta fokuksesta – ja me keskitymme siihen mikä tuottaa oikeasti arvoa.
+        </p>
+
+        <div class="story-block">
+          <h3>Näin kaikki sai alkunsa</h3>
+          <p>Meidän tarinamme alkoi osaamisesta korjata monimutkaisia ja kankeita yritysprosesseja eri kokoisille yrityksille sekä järjestelmiä Lean-, SixSigma ja Scrum-menetelmien avulla. Aluksi keskityimme pieniin jatkuvan parannuksen integraatioihin – ja tänä päivänä tarkoituksemme on rakentaa kokonaisvaltaisia sovellusratkaisuja, jotka tukevat liiketoimintaa ja toimivat kestävänä alustana kasvulle myös AI:n ja ML-koneoppimisen kautta.</p>
+        </div>
+
+        <div class="story-block">
+          <h3>Above Robust - ajattelu</h3>
+          <p>
+            Me tiedämme, että pelkkä hyvä ei enää riitä yrityksille kilpailussa. Me haluamme rakentaa Teille ratkaisuja, jotka kestävät kasvua, aikaa ja käyttöä sekä ovat helppoja ylläpitää. Meidän tiimimme on sitoutunut kehittämään <strong><u>suorituskykyistä koodia</u></strong>, joka on puhdasta, selkeää ja tekee sen minkä lupaa. Juuri sen varmistamiseksi jokainen projektimme etenee kolmen vaiheen kautta: <strong>Define</strong>, <strong>Build</strong> ja <strong>Finish</strong>.
+          </p>
+        </div>
+
+        <div class="story-block">
+          <h3>Kuka on Fox-In-The-Code?</h3>
+          <p>
+            Olen rakentaja, suunnittelija, kehittäjä ja kehittämisen kokenut monivuotinen asiantuntija vaativilta tuotanto- ja palveluliiketoiminnan aloilta. Yhdistän käytännönläheisen sovellussuunnittelun ja modernin teknologiaosaamisen. Työkalupakkiini kuuluvat mm. VS Code, GitHub Actions, Python, JavaScript, Tailwind CSS, SQL sekä REST API -integraatiot ja kevyt pilviarkkitehtuuri.
+            <br /><br />
+            Toimin itsenäisesti, mutta taustalla on laaja verkosto eri alan asiantuntijoita – tarvittaessa kokoan tiimin, jolla ratkaistaan ne isommat ja kinkkisimmätkin haasteet.
+          </p>
+        </div>
+
+        <div class="story-cta">
+          <h3>Tarvitsetko ratkaisun, joka ei hajoa eikä jää puolitiehen?</h3>
+          <a href="contact.html" class="btn">Ota yhteyttä</a>
+        </div>
+      </section>
+
+    </main>
+
+    <!-- ===============================
          FOOTER / ALATUNNISTE
     =============================== -->
-        <footer class="footer">
-            <p>&copy; 2025 Fox-In-The-Code | All rights reserved.</p>
-        </footer>
-
-    </div> <!-- /.wrapper -->
-
+    <footer class="footer">
+      <p>&copy; 2025 Fox-In-The-Code | All rights reserved.</p>
+    </footer>
+  </div>
 </body>
 
 </html>
