--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="contact.html" class="active">Contact</a>
+        <a href="services.html">Services</a>
       </div>
     </nav>
 
